src/components/ProductCard/ProductCard.module.scss
.root {
  display: flex;
  position: relative;
  height: 145px;
  border-radius: 16px;
  overflow: hidden;
  color: rgba(0, 0, 0, .96);
  background-color: #fff;
  box-shadow: 0px 16px 24px rgba(0, 0, 0, 0.04);

  @media screen and (max-width: 414px) {
    flex-direction: row-reverse;
    height: 172px;
  }
}

.image {
  display: block;
  max-width: 100%;
  max-height: 100%;
  width: 116px;
  object-fit: cover;

  @media screen and (max-width: 414px) {
    width: 96px;
    object-fit: contain;
    align-self: flex-end;
  }
}

.infoContainer {
  flex-grow: 1;
  padding: 12px 16px;
  display: flex;
  flex-direction: column;
}

.category {
  margin: 0 0 4px;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
  color: #a8b8ca;
}

.title {
  margin: 0 0 4px;
  font-weight: 700;
  font-size: 16px;
  line-height: 24px;
  text-transform: uppercase;

  @media screen and (max-width: 414px) {
    margin-bottom: 0;
  }
}

.description {
  flex-grow: 1;
  margin: 0;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  max-height: 40px; // 2 lines of text
  overflow: hidden;

  @media screen and (max-width: 414px) {
    max-height: 60px; // 3 lines of text
  }
}

.priceContainer {
  display: flex;
  align-items: center;
  
  @media screen and (max-width: 414px) {
    flex-direction: column;
    flex-grow: 1;
    justify-content: flex-end;
    align-items: start;
  }
}

.price {
  margin: 0;
  font-weight: 700;
  font-size: 16px;
  line-height: 24px;
}

.discount {
  margin: 0 0 0 8px;
  font-weight: 600;
  font-size: 12px;
  line-height: 16px;
  color: #f90;

  @media screen and (max-width: 414px) {
    margin-left: 0;
  }
}

.statusBadges {
  position: absolute;
  top: 8px;
  right: 12px;
  margin: 0;
  padding: 0;
  display: flex;
  list-style: none;
}

.statusBadge {
  margin-left: 8px;
  padding: 0 8px;
  border-radius: 12px;
  font-weight: 600;
  font-size: 10px;
  line-height: 20px;
  text-align: center;

  &_new {
    color: #20b02e;
    background-color: #e6f5e6;
  }

  &_limited {
    color: #889bb1;
    background-color: #e7eef9;
  }
}

